2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions_agents.php: cleanup
	sourcecode, and important optimize, because the old querys was very huge
	when the query have consult with all agent ids. That affect when login
	as admin into Pandora Console in systems with few resources (more or
	less 1Gb RAM in a desktop computer).
	* include/functions_db.php: add function "isAllGroups" that test if the
	array pass as parameter is all groups in DB, and return true o false. And
	cleanup source code.
	Fixes: 2824327

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: cleanup the source code.

2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: cleanup the source code and add many
	comments

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_alerts.js: fix the id for access to jquery
	in the field3.
	* godmode/alerts/configure_alert_action.php: fix the id for access to jquery
	in the event keyup.
	Fixes: 2845692

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add function "get_db_value_sql" for use in
	alert_list.php and in futures uses. This function returns the first column
	and first row from a query pass as parameters.
	* godmode/alerts/alert_list.php: fix bug that you can't add new alerts.
	Fixes: 2859264

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: change the method for test if a
	module is a numeric, and can normalize. Now obtain the ids from modules tipe
	that it's not proc or string, and this ids use to test.
	Fixes: 2849325

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php: change (at the moment) the ajax for
	delete elements by html static form with select, because sometimes (when you
	try delete elements with bigger dimensions fail).
	Fixes: 2815063
